--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Tenacious Contrarian</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -71,29 +72,35 @@
       font-size: 0.9rem;
     }
   </style>
+  <script defer data-domain="thetenaciouscontrarian.com" src="https://plausible.io/js/script.hash.outbound-links.tagged-events.js"></script>
+  <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 </head>
 <body>
   <header>
-    <img src="A_landing_page_webpage_for_\"logo.PNG" alt="The Tenacious Contrarian logo">
+    <img src="logo.png" alt="The Tenacious Contrarian logo">
     <h1>The Tenacious Contrarian</h1>
     <p>Writes to challenge mainstream narratives, with sharp insights on culture, sports, technology, history, and society.</p>
   </header>
 
   <div class="container">
     <div class="links">
-      <a href="https://medium.com/@tenaciouscontrarian" target="_blank">Medium</a>
+      <a href="https://thetenaciouscontrarian.medium.com" target="_blank">Medium</a>
       <a href="https://thetenaciouscontrarian.substack.com" target="_blank">Substack</a>
-      <a href="#" target="_blank">LinkedIn</a>
-      <a href="#" target="_blank">X/Twitter</a>
+      <a href="linkedin.com/company/the-tenacious-contrarian" target="_blank">LinkedIn</a>
+      <a href="https://x.com/TTContrarian" target="_blank">X/Twitter</a>
+      <a href="https://www.instagram.com/tenaciouscontrarian" target="_blank">Instagram</a>
     </div>
 
     <h2>Recent Essays</h2>
     <ul>
-      <li><strong><a href="https://medium.com/p/xxxxx" target="_blank">The Church of You: Self-ID, Protestantism, and the Collapse of Religious Authority</a></strong></li>
-      <li><strong><a href="https://medium.com/p/yyyyy" target="_blank">The Woke Empire: Missionary Zeal in the Age of Self-Loathing</a></strong></li>
-      <li><strong><a href="https://medium.com/p/zzzzz" target="_blank">Halo by Proximity: A Realistic Guide to Success for the Mediocre Majority</a></strong></li>
-      <li><strong><a href="https://medium.com/p/aaaaa" target="_blank">Hangul Without Hanja: What Korea Lost in Translation</a></strong></li>
-      <li><strong><a href="https://medium.com/p/bbbbb" target="_blank">It’s Called Soccer. Relax.</a></strong></li>
+      <li><strong><a href="https://substack.com/@thetenaciouscontrarian/note/p-161688968?utm_source=notes-share-action&r=5f7ozq" target="_blank">The Collapse of Identity: From Pronouns to Parody</a></strong></li>
+      <li><strong><a href="https://thetenaciouscontrarian.medium.com/the-habsburgs-europes-most-successful-failure-e591db660616" target="_blank">The Habsburgs: Europe’s Most Successful Failure</a></strong></li>
+      <li><strong><a href="https://substack.com/@thetenaciouscontrarian/note/p-161650481?utm_source=notes-share-action&r=5f7ozq" target="_blank">The Most Successful Email Campaign in History: What Growth Teams Can Learn from the Nigerian Prince</a></strong></li>
+      <li><strong><a href="https://medium.com/@thetenaciouscontrarian/gleaned-a-case-study-in-branding-fintech-and-startup-whiplash-259380642cdd" target="_blank">Gleaned: A Case Study in Branding, Fintech, and Startup Whiplash</a></strong></li>
+      <li><strong><a href="https://thetenaciouscontrarian.medium.com/the-church-of-you-self-id-protestantism-and-the-collapse-of-religious-authority-824b4395bcf7" target="_blank">The Church of You: Self-ID, Protestantism, and the Collapse of Religious Authority</a></strong></li>
+      <li><strong><a href="https://medium.com/@thetenaciouscontrarian/the-woke-empire-missionary-zeal-in-the-age-of-self-loathing-6874c867f222" target="_blank">The Woke Empire: Missionary Zeal in the Age of Self-Loathing</a></strong></li>
+      <li><strong><a href="https://medium.com/@thetenaciouscontrarian/its-called-soccer-relax-2580772fcdb6" target="_blank">It’s Called Soccer. Relax.</a></strong></li>
+      <li><strong><a href="https://medium.com/@thetenaciouscontrarian/hangul-without-hanja-what-korea-lost-in-translation-755eb1d517c7" target="_blank">Hangul Without Hanja: What Korea Lost in Translation</a></strong></li>
     </ul>
   </div>
 
