--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Tenacious Contrarian</title>
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="favicon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -22,6 +22,9 @@
     }
     header img {
       max-width: 200px;
+      max-height: 200px;
+      width: auto;
+      height: auto;
       margin-bottom: 1rem;
     }
     header h1 {
@@ -72,12 +75,10 @@
       font-size: 0.9rem;
     }
   </style>
-  <script defer data-domain="thetenaciouscontrarian.com" src="https://plausible.io/js/script.hash.outbound-links.tagged-events.js"></script>
-  <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="The Tenacious Contrarian logo">
+    <img src="logo.PNG" alt="The Tenacious Contrarian logo">
     <h1>The Tenacious Contrarian</h1>
     <p>Writes to challenge mainstream narratives, with sharp insights on culture, sports, technology, history, and society.</p>
   </header>
