--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="links">
       <a href="https://thetenaciouscontrarian.medium.com" target="_blank">Medium</a>
       <a href="https://thetenaciouscontrarian.substack.com" target="_blank">Substack</a>
-      <a href="linkedin.com/company/the-tenacious-contrarian" target="_blank">LinkedIn</a>
+      <a href="https://linkedin.com/company/the-tenacious-contrarian" target="_blank">LinkedIn</a>
       <a href="https://x.com/TTContrarian" target="_blank">X/Twitter</a>
       <a href="https://www.instagram.com/tenaciouscontrarian" target="_blank">Instagram</a>
     </div>
